--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,16 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  border: 2px solid black;
+  border-radius: 15px;
 }
 
 .input {
   font-size: 20px;
   margin: 0;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  border-bottom: 1px solid #000;
 }
 
 .str {
@@ -30,15 +34,50 @@
 .submit-button {
   width: 100%;
   height: 50px;
-  background-color: #aaa;
-  border: 1px solid black;
+  background-color: orange;
+  border: 0;
+  transition: all 0.3s;
+  border-radius: 25px;
+  margin-top: 30px;
 }
 
 .submit-button:hover {
-  background-color: #636363;
+  opacity: 0.7;
 }
 
 .result {
-  margin: 15px 0 0 0;
+  margin: 0;
   font-size: 30px;
+  width: 50vw;
+  word-wrap: break-word;
+  text-align: center;
+}
+
+.result-length {
+  width: 100%;
+  margin: 0;
+  font-size: 30px;
+  text-align: center;
+  margin-right: 65px;
+}
+
+.result-wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.copy-button {
+  width: 50px;
+  height: 25px;
+  margin-left: 15px;
+  background-color: orange;
+  transition: all 0.3s;
+  outline: 0;
+  border: 0;
+  border-radius: 25px;
+}
+
+.copy-button:hover {
+  opacity: 0.7;
 }
