--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap');
+
+body {
+  margin: 0;
+  overflow: hidden;
+  font-family: 'Ubuntu', serif;
+}
+
 .app {
   width: 100%;
   height: 95vh;
@@ -7,6 +15,50 @@
   align-items: center;
 }
 
+.app span {
+  position: absolute;
+  top: 50%;
+  width: 500px;
+  height: 500px;
+  background: #000;
+  transform: rotate(calc(90deg * var(--i)));
+  border-radius: 50%;
+  transform-origin: 250px 0;
+  filter: blur(80px);
+  opacity: 0.5;
+  z-index: -1;
+}
+
+.app span:nth-child(1) {
+  background-color: #01b2fe;
+}
+
+.app span:nth-child(2) {
+  background-color: #ff008c;
+}
+
+.app span:nth-child(3) {
+  background-color: #ffcd00;
+}
+
+.app span:nth-child(4) {
+  background-color: #00c456;
+}
+
+.app .glass {
+  background: rgba(255,255,255,0.5);
+  border-radius: 20px;
+}
+
+.app .glass:nth-of-type(1) {
+  padding: 50px;
+}
+
+.app .glass:nth-of-type(2) {
+  margin-top: 20px;
+  padding: 30px;
+}
+
 .heading {
   font-size: 50px;
 }
@@ -14,8 +66,10 @@
 .form {
   display: flex;
   flex-direction: column;
-  padding: 30px;
+  padding: 30px 30px 0;
   border-radius: 15px;
+  justify-content: center;
+  align-items: center;
 }
 
 .input {
@@ -25,6 +79,7 @@
   border: 0;
   outline: 0;
   border-bottom: 1px solid #000;
+  font-family: 'Ubuntu', serif;
 }
 
 .str {
@@ -32,52 +87,110 @@
 }
 
 .submit-button {
-  width: 100%;
+  width: 300px;
   height: 50px;
-  background-color: orange;
-  border: 0;
+  background-color: transparent;
+  border: 1px solid #fff;
   transition: all 0.3s;
   border-radius: 25px;
   margin-top: 30px;
+  position: relative;
+  overflow: hidden;
+  font-family: 'Ubuntu', serif;
 }
 
-.submit-button:hover {
-  opacity: 0.7;
+.submit-button:before {
+  content: '';
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  z-index: -1;
+  transition: all 0.3s;
+}
+
+.submit-button:hover::before {
+  background-color: #fff;
+  transform: translate(-50%, -50%) scale(1000%);
+}
+
+.submit-button:disabled {
+  border: 1px solid #a9a9a9;
+  color: #000;
+}
+
+.submit-button:disabled:hover::before {
+  background-color: #000;
 }
 
 .result {
-  margin: 0;
+  margin: 0 0 15px 0;
   font-size: 30px;
-  width: 30vw;
   word-wrap: break-word;
   text-align: center;
+  line-height: 30px;
 }
 
 .result-length {
   width: 100%;
   margin: 0;
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
-  margin-right: 65px;
 }
 
 .result-wrapper {
   display: flex;
   align-items: center;
-  margin-top: 15px;
+  flex-direction: column;
+  padding: 15px;
 }
 
 .copy-button {
   width: 50px;
   height: 25px;
-  margin-left: 15px;
-  background-color: orange;
+  background-color: transparent;
   transition: all 0.3s;
   outline: 0;
   border: 0;
   border-radius: 25px;
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #fff;
+  font-family: 'Ubuntu', serif;
 }
 
-.copy-button:hover {
-  opacity: 0.7;
+.copy-button:before {
+  content: '';
+  width: 1px;
+  height: 1px;
+  background-color: transparent;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  z-index: -1;
+  transition: all 0.3s;
+}
+
+.copy-button:hover::before {
+  width: 200%;
+  height: 200%;
+  background-color: #fff;
+  transform: translate(-50%, -50%);
+}
+
+.copy-button:disabled {
+  border: 1px solid #a9a9a9;
+  color: #000;
+}
+
+.copy-button:disabled:hover::before {
+  background-color: #000;
 }
