--- a/src/index.css
+++ b/src/index.css
@@ -8,22 +8,24 @@ body {
 
 .app {
   width: 100%;
-  height: 95vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow: hidden;
 }
 
 .app span {
   position: absolute;
   top: 50%;
-  width: 500px;
-  height: 500px;
+  width: 40%;
+  height: 40%;
   background: #000;
   transform: rotate(calc(90deg * var(--i)));
   border-radius: 50%;
-  transform-origin: 250px 0;
+  transform-origin: 50% 0;
   filter: blur(80px);
   opacity: 0.5;
   z-index: -1;
@@ -61,6 +63,8 @@ body {
 
 .heading {
   font-size: 50px;
+  text-align: center;
+  word-wrap: break-word;
 }
 
 .form {
@@ -129,11 +133,13 @@ body {
 }
 
 .result {
+  width: 450px;
+  display: block;
   margin: 0 0 15px 0;
   font-size: 30px;
   word-wrap: break-word;
-  text-align: center;
   line-height: 30px;
+  text-align: center;
 }
 
 .result-length {
@@ -193,4 +199,20 @@ body {
 
 .copy-button:disabled:hover::before {
   background-color: #000;
+}
+
+@media (max-width: 500px) {
+  .heading {
+    font-size: 30px;
+  }
+  .submit-button {
+    width: 200px;
+  }
+  .result {
+    width: 80vw;
+    font-size: 20px;
+  }
+  .result-length {
+    font-size: 20px;
+  }
 }
