--- a/src/index.css
+++ b/src/index.css
@@ -17,17 +17,52 @@ body {
   overflow: hidden;
 }
 
+.header {
+  display: flex;
+}
+
+.logo {
+  display: block;
+  width: 50px;
+  height: 50px;
+  margin: 0 0 0 0;
+  justify-self: flex-start;
+  background: url(./images/logo512.png) 50% no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.logo:hover {
+  margin-right: 15px;
+}
+
+.logo:hover .logo-text {
+  display: block;
+}
+
+.logo-text {
+  position: absolute;
+  display: none;
+  left: 100%;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .app span {
   position: absolute;
   top: 50%;
   width: 40%;
   height: 40%;
-  background: #000;
   transform: rotate(calc(90deg * var(--i)));
   border-radius: 50%;
   transform-origin: 50% 0;
   filter: blur(80px);
-  opacity: 0.5;
+  opacity: 0.4;
   z-index: -1;
 }
 
@@ -48,8 +83,9 @@ body {
 }
 
 .app .glass {
-  background: rgba(255,255,255,0.5);
+  background: transparent;
   border-radius: 20px;
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.3);
 }
 
 .app .glass:nth-of-type(1) {
@@ -125,11 +161,11 @@ body {
 
 .submit-button:disabled {
   border: 1px solid #a9a9a9;
-  color: #000;
 }
 
 .submit-button:disabled:hover::before {
-  background-color: #000;
+  background-color: #aaa;
+  color: #fff;
 }
 
 .result {
@@ -194,11 +230,11 @@ body {
 
 .copy-button:disabled {
   border: 1px solid #a9a9a9;
-  color: #000;
 }
 
 .copy-button:disabled:hover::before {
-  background-color: #000;
+  background-color: #aaa;
+  color: #fff;
 }
 
 @media (max-width: 500px) {
