--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ body {
 }
 
 .app .glass {
-  background: transparent;
+  background: rgba(0,0,0,0.1);
   border-radius: 20px;
   box-shadow: 20px 20px 50px rgba(0,0,0,0.3);
 }
