--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
+  color: #222;
 }
 
 .header {
@@ -83,9 +84,10 @@ body {
 }
 
 .app .glass {
-  background: rgba(0,0,0,0.1);
+  background: rgba(255,255,255,0.1);
   border-radius: 20px;
-  box-shadow: 20px 20px 50px rgba(0,0,0,0.3);
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.1);
+  border: 1px solid rgba(255,255,255,0.1);
 }
 
 .app .glass:nth-of-type(1) {
@@ -118,7 +120,8 @@ body {
   background-color: transparent;
   border: 0;
   outline: 0;
-  border-bottom: 1px solid #000;
+  color: #222;
+  border-bottom: 1px solid #222;
   font-family: 'Ubuntu', serif;
 }
 
